<resources>
    <string name="app_name">Zap</string>

    <string name="button_login">Entrar</string>
    <string name="text_cadastro">Não tem conta? Cadastre-se </string>

    <string name="button_cadastrar">Cadastrar</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="digite_email">Digite seu e-mail</string>
    <string name="digite_nome">Digite seu nome</string>

    <string name="titulo_configuracoes">Configurações</string>
    <string name="nome_usuario">Nome do usuário</string>
    <string name="aviso_nome_usuario">Esse não é seu nome de usuário nem sua senha. Esse nome ficará visível para seus contatos do WhatsApp</string>

    <string name="titulo_alerta_permissao">Permissões Negadas</string>
    <string name="mensagem_alerta_permissao">Para utilizar o app é necessário aceitar as permissões</string>
    <string name="bt_alerta_permissao">Confirmar</string>

    <string name="erro_upload_imagem">Erro ao fazer upload da imagem</string>
    <string name="sucesso_upload_imagem">Sucesso ao fazer upload da imagem</string>
    <string name="title_activity_chat">ChatActivity</string>

    <string name="alerta_chat">Por favor, digite uma mensagem</string>

    <string name="title_activity_grupo">GrupoActivity</string>
    <string name="novo_grupo">Novo grupo</string>

    <string name="title_activity_cadastro_grupo">CadastroGrupoActivity</string>
    <string name="subtitulo_novo_grupo">Defina o nome do grupo</string>
    <string name="hint_nome_grupo">Digite o nome do grupo</string>
</resources>
